[package]
name = "upheaval-draft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
crossterm = "0.27.0"
csv = "1.3.0"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
random = "0.14.0"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
